post launch bugs

--- a/_locales/ja.yml
+++ b/_locales/ja.yml
@@ -18,7 +18,7 @@ ja:
   your_message: メッセージをご入力ください
   address: 〒103-0013 東京都中央区 <br/>日本橋人形町1-5-8
   links: Links
-  about_links: 約
+  about_links: About
   culture: 文化
   location: ロケーション
   direction: アクセス
