offers listing and details pages are done

--- a/_locales/en.yml
+++ b/_locales/en.yml
@@ -45,3 +45,7 @@ en:
   validation_agree: You must agree before submitting.
   gallery_title: Gallery
   all: All
+  special_offers: Special Offers
+  view_offer: View Offer
+  check_rate: Check Rate
+  book_offer: Book Offer
