--- a/_locales/ja.yml
+++ b/_locales/ja.yml
@@ -46,3 +46,7 @@ ja:
   validation_agree: You must agree before submitting.
   gallery_title: 画廊
   all: すべて
+  special_offers: Special Offers
+  view_offer: View Offer
+  check_rate: Check Rate
+  book_offer: Book Offer
