rfp page development done

--- a/_locales/ja.yml
+++ b/_locales/ja.yml
@@ -50,3 +50,6 @@ ja:
   view_offer: View Offer
   check_rate: Check Rate
   book_offer: Book Offer
+  rfp_headline: Tell us about your next event
+  phone_number: Phone Number
+  date_of_interest: Date of Interest (Not Mandatory)
