--- a/_locales/en.yml
+++ b/_locales/en.yml
@@ -49,3 +49,6 @@ en:
   view_offer: View Offer
   check_rate: Check Rate
   book_offer: Book Offer
+  rfp_headline: Tell us about your next event
+  phone_number: Phone Number
+  date_of_interest: Date of Interest (Not Mandatory)
