--- a/_locales/en.yml
+++ b/_locales/en.yml
@@ -52,3 +52,4 @@ en:
   rfp_headline: Tell us about your next event
   phone_number: Phone Number
   date_of_interest: Date of Interest (Not Mandatory)
+  see_menu: See Menu
