--- a/_locales/ja.yml
+++ b/_locales/ja.yml
@@ -53,3 +53,4 @@ ja:
   rfp_headline: Tell us about your next event
   phone_number: Phone Number
   date_of_interest: Date of Interest (Not Mandatory)
+  see_menu: See Menu
