--- a/_locales/en.yml
+++ b/_locales/en.yml
@@ -53,3 +53,6 @@ en:
   phone_number: Phone Number
   date_of_interest: Date of Interest (Not Mandatory)
   see_menu: See Menu
+  valid_until: Valid until
+  terms_conditions: Terms & Conditions
+  view_all_offers: View All Offers
