--- a/_locales/ja.yml
+++ b/_locales/ja.yml
@@ -47,10 +47,13 @@ ja:
   gallery_title: 画廊
   all: すべて
   special_offers: Special Offers
-  view_offer: View Offer
+  view_offer: 詳細を見る
   check_rate: Check Rate
-  book_offer: Book Offer
+  book_offer: 予約する
   rfp_headline: Tell us about your next event
   phone_number: Phone Number
   date_of_interest: Date of Interest (Not Mandatory)
   see_menu: See Menu
+  valid_until: 有効期限：
+  terms_conditions: 利用規約
+  view_all_offers: 全てのキャンペーンを見る
