--- a/_locales/en.yml
+++ b/_locales/en.yml
@@ -56,3 +56,5 @@ en:
   valid_until: Valid until
   terms_conditions: Terms & Conditions
   view_all_offers: View All Offers
+  hours: Hours
+  menu: Menu
